Final/.metadata/.plugins/org.eclipse.cdt.ui/lab9_app.build.sync-conflict-20240426-154002-UJU6PGU.log
15:39:43 **** Incremental Build of configuration Nios II for project lab9_app ****
make all 
Info: Building ../lab9_app_bsp/
C:/intelFPGA_lite/18.0/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../lab9_app_bsp/
[BSP build complete]
Info: Compiling palette_test.c to obj/default/palette_test.o
nios2-elf-gcc -xc -MP -MMD -c -I../lab9_app_bsp//HAL/inc -I../lab9_app_bsp/ -I../lab9_app_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/palette_test.o palette_test.c
In file included from palette_test.c:8:0:
text_mode_vga_color.h:41:52: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
 static volatile struct TEXT_VGA_STRUCT* vga_ctrl = 0x08000000;
                                                    ^
palette_test.c: In function 'paletteTest':
palette_test.c:13:2: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
  printf("paletteTest\n");
  ^
palette_test.c:13:2: warning: incompatible implicit declaration of built-in function 'printf'
palette_test.c:13:2: note: include '<stdio.h>' or provide a declaration of 'printf'
palette_test.c:19:3: warning: implicit declaration of function 'usleep' [-Wimplicit-function-declaration]
   usleep (20000);
   ^
palette_test.c:22:3: error: stray '\243' in program
   setColorPalette(0,  255£¬ 0£¬ 0);
   ^
palette_test.c:22:3: error: stray '\254' in program
palette_test.c:22:29: error: expected ')' before numeric constant
   setColorPalette(0,  255£¬ 0£¬ 0);
                             ^
palette_test.c:22:29: error: stray '\243' in program
palette_test.c:22:29: error: stray '\254' in program
palette_test.c:22:3: error: too few arguments to function 'setColorPalette'
   setColorPalette(0,  255£¬ 0£¬ 0);
   ^
In file included from palette_test.c:8:0:
text_mode_vga_color.h:66:6: note: declared here
 void setColorPalette (alt_u8 color, alt_u8 red, alt_u8 green, alt_u8 blue); //Fill in this code
      ^
palette_test.c:23:3: error: stray '\243' in program
   setColorPalette(0,  0£¬ 255£¬ 0);
   ^
palette_test.c:23:3: error: stray '\254' in program
palette_test.c:23:27: error: expected ')' before numeric constant
   setColorPalette(0,  0£¬ 255£¬ 0);
                           ^
palette_test.c:23:27: error: stray '\243' in program
palette_test.c:23:27: error: stray '\254' in program
palette_test.c:23:3: error: too few arguments to function 'setColorPalette'
   setColorPalette(0,  0£¬ 255£¬ 0);
   ^
In file included from palette_test.c:8:0:
text_mode_vga_color.h:66:6: note: declared here
 void setColorPalette (alt_u8 color, alt_u8 red, alt_u8 green, alt_u8 blue); //Fill in this code
      ^
palette_test.c:26:9: warning: format '%u' expects argument of type 'unsigned int', but argument 2 has type 'alt_u32 {aka volatile long unsigned int}' [-Wformat=]
  printf(" %u\n", vga_ctrl->PALETTE[0]);
         ^
In file included from palette_test.c:8:0:
palette_test.c: At top level:
text_mode_vga_color.h:44:21: warning: 'colors' defined but not used [-Wunused-variable]
 static struct COLOR colors[]={
                     ^
make: *** [obj/default/palette_test.o] Error 1

15:39:44 Build Finished (took 854ms)

